# quantum-moe-mas

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TASK_7.3_COMPLETION_SUMMARY.md  demo_interactive_features.py  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py  test_api_integrations.py  test_components_only.py  test_database_integration.py  test_interactive.py  test_interactive_simple.py  test_supabase_integration.py  test_usage_tracking.py  validate_moe.py  validate_rag.py  vercel.json
.github/workflows/: ci.yml  security.yml
api/: index.py
config/: development.yaml  logging.yaml  production.yaml
docs/: ARCHITECTURE.md
k8s/: configmap.yaml  deployment.yaml  namespace.yaml
src/quantum_moe_mas/: __init__.py  cli.py
src/quantum_moe_mas/agents/: __init__.py  base_agent.py  cloud_agent.py  communication.py  cyber_agent.py  marketing_agent.py  monitoring.py  quantum_agent.py
src/quantum_moe_mas/api/: __init__.py  cost_manager.py  health_monitor.py  integration_registry.py  key_manager.py  orchestrator.py  performance_analyzer.py  rate_limiter.py  signup_manager.py  usage_cost_integration.py  usage_tracker.py
src/quantum_moe_mas/api/integrations/: __init__.py  base.py  cerebras.py  cohere.py  deepseek.py  flux_11.py  google_ai_studio.py  groq.py  hugging_face.py  openai_playground.py  replicate.py  stability_ai.py
src/quantum_moe_mas/business/: __init__.py  roi_engine.py
src/quantum_moe_mas/config/: __init__.py  settings.py  settings_simple.py
src/quantum_moe_mas/core/: __init__.py  exceptions.py  logging.py  logging_simple.py
src/quantum_moe_mas/moe/: __init__.py  analytics.py  expert.py  expert_manager.py  metrics.py  router.py
src/quantum_moe_mas/monitoring/: __init__.py  bottleneck_analyzer.py  dashboard_integration.py  latency_tracker.py  metrics_collector.py  prometheus_exporter.py  resource_monitor.py
src/quantum_moe_mas/orchestration/: __init__.py  genetic_evolution.py  mas_orchestrator.py  system_monitor.py
src/quantum_moe_mas/rag/: __init__.py  adaptive_rag.py  document.py  embeddings.py  metrics_collector.py  processors.py  retrieval.py  retrieval_cache.py
src/quantum_moe_mas/rag/database/: __init__.py  connection.py  models.py  operations.py  schema.py
src/quantum_moe_mas/scaling/: __init__.py  auto_scaler.py  container_orchestrator.py  intelligent_cache.py  kubernetes_scaler.py  load_balancer.py  predictive_scaler.py  redis_cache.py
src/quantum_moe_mas/security/: __init__.py  access_control.py  audit.py  auth.py  encryption.py  monitoring.py  owasp.py  validation.py
src/quantum_moe_mas/ui/: __init__.py  dashboard.py  main.py
src/quantum_moe_mas/ui/components/: analytics.py  enhanced_query.py  interactive.py
tests/: __init__.py  conftest.py  test_genetic_evolution.py
tests/unit/: test_adaptive_rag.py  test_config.py  test_logging.py  test_moe_router.py
